[package]
name = "forager_llvm_lines"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wezel-build/forager_llvm_lines"
publish = false
license = "Apache-2.0"

[[bin]]
name = "forager-llvm-lines"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wezel_types = { git = "https://github.com/wezel-build/wezel" }

[profile.dist]
inherits = "release"
lto = "thin"
